Configuracion de Trabajadores y realizacion de ventas, tanto base de datos como su implementacion